REGISTER, LOGIN, LOGOUT done

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.css";
+@import "~font-awesome/css/font-awesome.min.css";
+
+/* Show it is fixed to the top */
+body {
+    padding-top: 56px;
+}
