--- a/src/app/core/components/home-navbar/home-navbar.component.html
+++ b/src/app/core/components/home-navbar/home-navbar.component.html
@@ -1,38 +1,39 @@
-<nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
-  <a class="navbar-brand" routerLink="/">MON Infotech</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
-    aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarCollapse">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="/">Home
-          <span class="sr-only">(current)</span>
-        </a>
-      </li>
-    </ul>
+<nav class="navbar navbar-expand-md fixed-top">
+  <div class="container">
+    <a class="navbar-brand" routerLink="/">
+      <strong>MON Infotech</strong>
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
+      aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+      <ul class="navbar-nav mr-auto">
 
-    <ul class="navbar-nav">
-      <ng-template #anonymousUser>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/login"> Login</a>
+      </ul>
+
+      <ul class="navbar-nav">
+        <ng-template #anonymousUser>
+          <li class="nav-item">
+            <a class="btn btn-sm raised" routerLink="/register"> Sign Up</a>
+          </li>
+          <li class="nav-item">
+            <a class="btn btn-sm raised  ml-2" routerLink="/login">
+              <i class="fa fa-user"></i> Log In</a>
+          </li>
+        </ng-template>
+        <li ngbDropdown *ngIf="appUser; else  anonymousUser" placement="bottom-right" class="nav-item dropdown">
+          <a ngbDropdownToggle class="nav-link dropdown-toggle" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ appUser.name }}</a>
+          <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown02">
+            <a class="dropdown-item" *ngIf="hasAdminRole()" routerLink="/admin/index">
+              <i class="fa fa-tachometer"></i> Admin Panel</a>
+            <a class="dropdown-item" routerLink="/changePassword">
+              <i class="fa fa-unlock-alt"></i> Change Password</a>
+            <a class="dropdown-item" (click)="logout()">
+              <i class="fa fa-sign-out"></i> Log Out</a>
+          </div>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/register"> Register</a>
-        </li>
-      </ng-template>
-      <li ngbDropdown *ngIf="appUser; else  anonymousUser" placement="bottom-right" class="nav-item dropdown">
-        <a ngbDropdownToggle class="nav-link dropdown-toggle" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ appUser.name }}</a>
-        <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown02">
-          <a class="dropdown-item" routerLink="/dashboard">
-            <i class="fa fa-tachometer"></i> Dashboard</a>
-          <a class="dropdown-item" routerLink="/changePassword">
-            <i class="fa fa-unlock-alt"></i> Change Password</a>
-          <a class="dropdown-item" (click)="logout()">
-            <i class="fa fa-sign-out"></i> Log Out</a>
-        </div>
-      </li>
-    </ul>
+      </ul>
+    </div>
   </div>
 </nav>
