******** USER AND COMPANY DONE **********

--- a/src/app/admin/admin-navbar/admin-navbar.component.html
+++ b/src/app/admin/admin-navbar/admin-navbar.component.html
@@ -17,15 +17,11 @@
             <span class="sr-only">(current)</span>
           </a>
         </li>
-        <!-- <li ngbDropdown placement="bottom-right" class="nav-item dropdown">
-          <a ngbDropdownToggle class="nav-link dropdown-toggle" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">User</a>
-          <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown01">
-            <a class="dropdown-item" routerLink="/admin/user/add-user">
-              <i class="fa fa-plus"></i> Add user</a>
-            <a class="dropdown-item" routerLink="/admin/user/user-list">
-              <i class="fa fa-list"></i> User List</a>
-          </div>
-        </li> -->
+        <li class="nav-item active">
+          <a class="nav-link" routerLink="/admin/company/add-company"> Company
+            <span class="sr-only">(current)</span>
+          </a>
+        </li>
       </ul>
 
       <ul class="navbar-nav">
