--- a/src/app/admin/user/user-roles/user-roles.component.html
+++ b/src/app/admin/user/user-roles/user-roles.component.html
@@ -19,12 +19,14 @@
         </div>
 
         <form class="p-3" #usr="ngForm" (ngSubmit)="save(usr.value)" novalidate>
-          <div class="form-group">
-            <label for="name">Name</label>
-            <label class="form-control">{{user.name}} &nbsp;</label>
+          <div class="form-group row">
+            <label class="col-2 col-form-label" for="name">Name</label>
+            <div class="col-10">
+              <label class="form-control">{{user.name}} &nbsp;</label>
+            </div>
           </div>
 
-          <div class="form-group row mx-3">
+          <div class="form-group row ">
             <label class="col-2 col-form-label">Roles</label>
             <div class="col-10">
               <select class="form-control" name="roles" [(ngModel)]="user.roles">
