--- a/src/app/core/components/home-navbar/home-navbar.component.html
+++ b/src/app/core/components/home-navbar/home-navbar.component.html
@@ -25,8 +25,10 @@
         <li ngbDropdown *ngIf="appUser; else  anonymousUser" placement="bottom-right" class="nav-item dropdown">
           <a ngbDropdownToggle class="nav-link dropdown-toggle" id="dropdown02" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ appUser.name }}</a>
           <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown02">
-            <a class="dropdown-item" *ngIf="hasAdminRole()" routerLink="/admin/index">
-              <i class="fa fa-tachometer"></i> Admin Panel</a>
+            <!-- <a class="dropdown-item" *ngIf="hasAdminRole() && appUser$?.emailVerified" routerLink="/admin/index">
+              <i class="fa fa-tachometer"></i> Admin Panel</a> -->
+            <a class="dropdown-item" *ngIf="appUser$?.emailVerified" routerLink="/dashboard/index">
+              <i class="fa fa-tachometer"></i> Dashboard</a>
             <a class="dropdown-item" routerLink="/changePassword">
               <i class="fa fa-unlock-alt"></i> Change Password</a>
             <a class="dropdown-item" (click)="logout()">
@@ -37,3 +39,7 @@
     </div>
   </div>
 </nav>
+
+<div class="alert alert-danger text-center"  *ngIf="appUser$ && !appUser$?.emailVerified">
+  YOUR EMAIL IS NOT VERIFIED! PLESE, <a (click)="sendVerificationEmail()" [routerLink]>VERIFY</a>
+</div>
