--- a/src/app/dashboard/dashboard-navbar/dashboard-navbar.component.html
+++ b/src/app/dashboard/dashboard-navbar/dashboard-navbar.component.html
@@ -12,13 +12,18 @@
             <span class="sr-only">(current)</span>
           </a>
         </li>
-        <li class="nav-item active">
+        <li class="nav-item active" *ngIf="hasAdminRole()">
           <a class="nav-link" routerLink="/dashboard/user/add-user"> Users
             <span class="sr-only">(current)</span>
           </a>
         </li>
-        <li class="nav-item active">
+        <li class="nav-item active" *ngIf="hasAdminRole()">
           <a class="nav-link" routerLink="/dashboard/company/add-company"> Company
+            <span class="sr-only">(current)</span>
+          </a>
+        </li>
+        <li class="nav-item active" *ngIf="hasIspRole()">
+          <a class="nav-link" routerLink="/dashboard/customer/add-customer/add"> Customer
             <span class="sr-only">(current)</span>
           </a>
         </li>
