--- a/src/app/dashboard/customer/customer-images/customer-images.component.html
+++ b/src/app/dashboard/customer/customer-images/customer-images.component.html
@@ -1,13 +1,35 @@
-
 <div class="container">
-  <div class="row border">
-    <div class="col-4">
+  <!-- <p><ngb-progressbar type="success" [value]="25"></ngb-progressbar></p> -->
+  <div class="row raised mb-3">
+    <div class="col-12 p-0">
+      <h5 class="bg-dark text-light text-center m-0">{{ customer?.name }} Profile Picture</h5>
+    </div>
+
+    <div class="col-4 text-center">
       <img *ngIf="customer?.imageUrl" [src]="customer?.imageUrl" alt="{{ customer?.imageUrl }}" class="card-img-top img-fluid">
     </div>
-    <div class="col-8">
-      <h5 class="bg-light text-center">{{ customer?.name }}</h5>
-      <input type="file" (change)="uploadFile($event)" />
+    <div class="col-8 border">
+      <h5 class="bg-light text-center">Profile Picture</h5>
+      <input type="file" (change)="onProfileImageChange($event)" accept="image/*">
       <div>Percentages : {{ uploadPercent | async | number}} %</div>
+    </div>
+  </div>
+  <!-- {{ customer | json}} -->
+  <div class="row raised mb-3">
+    <div class="col-12 p-0">
+      <h5 class="bg-dark text-light text-center m-0">{{ customer?.name }} Id Pictures</h5>
+    </div>
+    <div class="col-6 text-center">
+      <div *ngIf="customer">
+        <img *ngIf="customer.idImagesUrl" [src]="customer?.idImagesUrl[0]" alt="{{ customer?.idImagesUrl[0] }}" class="card-img-top img-fluid">
+      </div>
+      <input type="file" (change)="onId1ImageChange($event)" accept="image/*">
+    </div>
+    <div class="col-6">
+      <div *ngIf="customer">
+        <img *ngIf="customer.idImagesUrl" [src]="customer?.idImagesUrl[1]" alt="{{ customer?.idImagesUrl[1] }}" class="card-img-top img-fluid">
+      </div>
+      <input type="file" (change)="onId2ImageChange($event)" accept="image/*">
     </div>
   </div>
 </div>
