--- a/src/app/dashboard/customer/customer-details/customer-details.component.html
+++ b/src/app/dashboard/customer/customer-details/customer-details.component.html
@@ -167,6 +167,15 @@
             <label class="col-2 col-form-label">Subnet</label>
             <label class="col-4 col-form-label card">{{customer?.subnet}}</label>
         </div>
+
+        <div class="col-12 row extra-margin">
+            <div class="col-md-6">
+                <img *ngIf="customer" [src]="customer?.idImagesUrl[0]" alt="" class="card-img-top img-fluid">
+            </div>
+            <div class="col-md-6">
+                <img *ngIf="customer" [src]="customer?.idImagesUrl[1]" alt="" class="card-img-top img-fluid">
+            </div>
+        </div>
     </div>
     <div class="form-group row mt-5 pt-5">
         <label class="col-2 col-form-label" style="border-top: 1px dashed black;">Authorized Signature</label>
