--- a/src/app/dashboard/customer/inactive-customer-list/inactive-customer-list.component.html
+++ b/src/app/dashboard/customer/inactive-customer-list/inactive-customer-list.component.html
@@ -23,6 +23,7 @@
           </tr>
         </tbody>
       </table>
+      <loading-spiner *ngIf="showSpiner"></loading-spiner>
     </div>
   </div>
 </div>
