--- a/src/themes.scss
+++ b/src/themes.scss
@@ -6,3 +6,5 @@ $accentColor:        #FFC107;
 $primaryTextColor:   #212121;
 $secondaryTextColor: #757575;
 $dividerColor:       #BDBDBD;
+
+$dark-primary-color:  #00796B;
