--- a/src/app/dashboard/accounting/accounting-sub-navbar/accounting-sub-navbar.component.html
+++ b/src/app/dashboard/accounting/accounting-sub-navbar/accounting-sub-navbar.component.html
@@ -2,4 +2,6 @@
     <a routerLink="/dashboard/accounting/invoice" class="btn btn-light btn-sm" [class.active]="active == 1" (click)="makeActive(1)">INVOICE</a>
     <a routerLink="/dashboard/accounting/customer-ledger" class="ml-2 btn btn-light btn-sm" [class.active]="active == 2" (click)="makeActive(2)">CUSTOMER LEDGER</a>
     <a routerLink="/dashboard/accounting/cashbook" class="ml-2 btn btn-light btn-sm" [class.active]="active == 3" (click)="makeActive(3)">CASHBOOK</a>
+    <a routerLink="/dashboard/accounting/add-income" class="ml-2 btn btn-light btn-sm" [class.active]="active == 4" (click)="makeActive(4)">ADD INCOME</a>
+    <a routerLink="/dashboard/accounting/add-expense" class="ml-2 btn btn-light btn-sm" [class.active]="active == 5" (click)="makeActive(5)">ADD EXPENSE</a>
   </nav>
