--- a/src/app/dashboard/accounting/cashbook/cashbook.component.html
+++ b/src/app/dashboard/accounting/cashbook/cashbook.component.html
@@ -1,26 +1,9 @@
 <div class="container">
   <div class="row mt-2">
-    <div class="col-md-4 p-0 p-md-3">
-      <!-- <input class="form-control mb-3" type="text" (keyup)="search($event)" placeholder="search customer...">
-      <div *ngIf="customers?.length > 0; else noInfo">
-        <div class="border rounded p-2 mb-2 cus-list" *ngFor="let cus of customers" (click)="loadCustomerLedger(cus.id)">
-          <h4 class="mb-1">{{cus?.name}}</h4>
-          <p class="mb-0">
-            Phone: {{cus?.phone}} | Username: {{ cus?.userName }}
-          </p>
-        </div>
-      </div>
-      <ng-template #noInfo>
-        <p>
-          No results found :(
-        </p>
-      </ng-template> -->
-    </div>
 
-    <div class="col-md-8 p-0 p-md-3 border rounded" *ngIf="cashbooks.length>0">
-
+    <div class="col-md-7 p-0 px-md-3 border rounded" *ngIf="cashbooks.length>0">
       <h3 class="text-center">Cashbook</h3>
-      <table class="table table-striped table-responsive-sm">
+      <table class="table table-striped table-responsive-sm m-0">
         <thead class="thead-dark">
           <tr>
             <th>Date</th>
@@ -30,7 +13,7 @@
             <th>balance</th>
           </tr>
         </thead>
-        <!-- {{patient.date | date:'dd-MM-yyyy'}} -->
+        
         <tbody>
           <tr *ngFor="let cash of cashbooks">
             <td>{{ cash?.date | date:'dd-MM-yyyy'}}</td>
@@ -43,5 +26,8 @@
       </table>
     </div>
 
+    <div class="col-md-4 p-0 p-md-3">
+      
+    </div>
   </div>
 </div>
