--- a/src/app/dashboard/dashboard-navbar/dashboard-navbar.component.scss
+++ b/src/app/dashboard/dashboard-navbar/dashboard-navbar.component.scss
@@ -28,3 +28,8 @@
     color: $darkPrimaryColor! important;
     background: $textPrimaryColor;
 }
+
+.navbar-toggler{
+    color: hsla(0,0%,100%,.5);
+    border-color: white;
+}
