--- a/src/app/core/components/home-navbar/home-navbar.component.html
+++ b/src/app/core/components/home-navbar/home-navbar.component.html
@@ -13,6 +13,9 @@
       </ul>
 
       <ul class="navbar-nav">
+        <li class="nav-item"  *ngIf="appUser">
+          <a class="btn" routerLink="/dashboard/index"> Dashboard </a>
+        </li>
         <ng-template #anonymousUser>
           <li class="nav-item">
             <a class="btn btn-sm raised" routerLink="/register"> Sign Up</a>
@@ -27,19 +30,21 @@
           <div ngbDropdownMenu class="dropdown-menu" aria-labelledby="dropdown02">
             <!-- <a class="dropdown-item" *ngIf="hasAdminRole() && appUser$?.emailVerified" routerLink="/admin/index">
               <i class="fa fa-tachometer"></i> Admin Panel</a> -->
-            <a class="dropdown-item" *ngIf="appUser$?.emailVerified" routerLink="/dashboard/index">
-              <i class="fa fa-tachometer"></i> Dashboard</a>
+            <!-- <a class="dropdown-item" *ngIf="appUser$?.emailVerified" routerLink="/dashboard/index">
+              <i class="fa fa-tachometer"></i> Dashboard</a> -->
             <a class="dropdown-item" routerLink="/changePassword">
               <i class="fa fa-unlock-alt"></i> Change Password</a>
             <a class="dropdown-item" (click)="logout()">
               <i class="fa fa-sign-out"></i> Log Out</a>
           </div>
         </li>
+
       </ul>
     </div>
   </div>
 </nav>
 
-<div class="alert alert-danger text-center"  *ngIf="appUser$ && !appUser$?.emailVerified">
-  YOUR EMAIL IS NOT VERIFIED! PLESE, <a (click)="sendVerificationEmail()" [routerLink]>VERIFY</a>
+<div class="alert alert-danger text-center" *ngIf="appUser$ && !appUser$?.emailVerified">
+  YOUR EMAIL IS NOT VERIFIED! PLESE,
+  <a (click)="sendVerificationEmail()" [routerLink]>VERIFY</a>
 </div>
