--- a/src/app/core/components/home/home.component.html
+++ b/src/app/core/components/home/home.component.html
@@ -4,7 +4,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4">
-          <img src="assets/images/construction.webp" alt="image2" height="170">
+          <img src="assets/images/isp.webp" alt="image2" height="170">
         </div>
         <div class="col-md-8">
           <h1>ISP Billing </h1>
