--- a/src/app/dashboard/accounting/add-expense/add-expense.component.html
+++ b/src/app/dashboard/accounting/add-expense/add-expense.component.html
@@ -23,6 +23,38 @@
               <td>{{ cash?.balance }}</td>
             </tr>
           </tbody>
+          <tfoot>
+              <tr>
+                <td>
+                  Show
+                  <select name="limit" #cl (change)="changeLimit(cl.value)">
+                    <option value="5">5</option>
+                    <option value="10">10</option>
+                    <option value="15">15</option>
+                    <option value="20">20</option>
+                  </select>
+                  entries &nbsp;
+                </td>
+                <td colspan="4">
+                  <nav aria-label="Page navigation example">
+                    <ul class="pagination justify-content-end">
+                      <li class="page-item">
+                        <a class="page-link" (click)="first()">First</a>
+                      </li>
+                      <li class="page-item">
+                        <a class="page-link" (click)="prev()">Previous</a>
+                      </li>
+                      <li class="page-item">
+                        <a class="page-link" (click)="next()">Next</a>
+                      </li>
+                      <li class="page-item">
+                        <a class="page-link" (click)="last()">Last</a>
+                      </li>
+                    </ul>
+                  </nav>
+                </td>
+              </tr>
+            </tfoot>
         </table>
       </div>
   
@@ -36,7 +68,7 @@
             <strong>{{errorMessage}}</strong>
           </div>
   
-          <form class="px-4" #addExp="ngForm" (ngSubmit)="saveExpense(addExp.value)">
+          <form class="p-4" #addExp="ngForm" (ngSubmit)="saveExpense(addExp.value)">
             <div class="form-group">
               <label for="date">Date</label>
               <input class="form-control" type="date" id="date" name="date" #date="ngModel" [ngModel]="cashbook.date | date:'yyyy-MM-dd'" readonly/>
@@ -58,6 +90,7 @@
             </div>
   
             <button type="submit" class="btn btn-primary" [disabled]="addExp.invalid">Save</button>
+            <button type="button" class="btn btn-warning" (click)="clear()">Clear</button>
           </form>
         </div>
       </div>
