--- a/src/app/dashboard/accounting/cashbook/cashbook.component.html
+++ b/src/app/dashboard/accounting/cashbook/cashbook.component.html
@@ -3,7 +3,7 @@
 
     <div class="col-md-7 p-0 px-md-3 border rounded" *ngIf="cashbooks.length>0">
       <h3 class="text-center">Cashbook</h3>
-      <table class="table table-striped table-responsive-sm m-0">
+      <table class="table table-striped table-responsive-sm">
         <thead class="thead-dark">
           <tr>
             <th>Date</th>
@@ -13,21 +13,53 @@
             <th>balance</th>
           </tr>
         </thead>
-        
+
         <tbody>
           <tr *ngFor="let cash of cashbooks">
-            <td>{{ cash?.date | date:'dd-MM-yyyy'}}</td>
+            <td>{{ cash?.date | date:'yyyy-MM-dd HH:mm'}}</td>
             <td>{{ cash?.explanation }}</td>
             <td>{{ cash?.debit }}</td>
             <td>{{ cash?.credit }}</td>
             <td>{{ cash?.balance }}</td>
           </tr>
         </tbody>
+        <tfoot>
+          <tr>
+            <td>
+              Show
+              <select name="limit" #cl (change)="changeLimit(cl.value)">
+                <option value="5">5</option>
+                <option value="10">10</option>
+                <option value="15">15</option>
+                <option value="20">20</option>
+              </select>
+              entries &nbsp;
+            </td>
+            <td colspan="4">
+              <nav aria-label="Page navigation example">
+                <ul class="pagination justify-content-end">
+                  <li class="page-item">
+                    <a class="page-link" (click)="first()">First</a>
+                  </li>
+                  <li class="page-item">
+                    <a class="page-link" (click)="prev()">Previous</a>
+                  </li>
+                  <li class="page-item">
+                    <a class="page-link" (click)="next()">Next</a>
+                  </li>
+                  <li class="page-item">
+                    <a class="page-link" (click)="last()">Last</a>
+                  </li>
+                </ul>
+              </nav>
+            </td>
+          </tr>
+        </tfoot>
       </table>
     </div>
 
     <div class="col-md-4 p-0 p-md-3">
-      
+
     </div>
   </div>
 </div>
