--- a/src/app/dashboard/accounting/invoice/invoice.component.html
+++ b/src/app/dashboard/accounting/invoice/invoice.component.html
@@ -4,7 +4,9 @@
       <input class="form-control mb-3" type="text" (keyup)="search($event)" placeholder="search customer...">
       <div *ngIf="customers?.length > 0; else noInfo">
         <div class="border rounded p-2 mb-2 cus-list" *ngFor="let cus of customers" (click)="loadCustomerLedger(cus.id)">
-          <h4 class="mb-1">{{cus?.name}} <small>({{ cus?.userName }})</small> </h4>
+          <h4 class="mb-1">{{cus?.name}}
+            <small>({{ cus?.userName }})</small>
+          </h4>
           <p class="mb-0">
             Phone: {{cus?.phone}}
           </p>
@@ -18,89 +20,90 @@
     </div>
 
     <div class="col-md-8" *ngIf="customer">
-
-      <!-- Invoice Top Row -->
-      <div class="row">
-        <div class="col-md-4 col-sm-4 border border-secondary rounded">
-          <h5 class="m-0">{{company?.companyName}}</h5>
-          <small>{{company?.companyAddress}}
-            <br>Phone: {{company?.telephone}}</small>
-        </div>
-
-        <div class="col-md-4 col-sm-4">
-          <h5 class="text-center">Invoice</h5>
-          <small> Date : {{invoice?.date | date:'yyyy-MM-dd'}}
-            <br> ID : {{invoice?.invoiceId}} </small>
-        </div>
-
-        <div class="col-md-4 col-sm-4 border border-secondary rounded">
-          <h5 class="m-0">{{customer?.name}}</h5>
-          <small>
-            {{customer?.prAddress?.flat == null? '' : 'Flat:' + customer?.prAddress?.flat + ', '}} {{customer?.prAddress?.floor
-            == null? '' : 'Floor:' + customer?.prAddress?.floor + ', '}} {{customer?.prAddress?.house ==
-            null? '' : 'House:' + customer?.prAddress?.house + ', '}} {{customer?.prAddress?.road == null?
-            '' : 'Road:' + customer?.prAddress?.road + ', '}} {{customer?.prAddress?.area == null? '' :
-            'Area:' + customer?.prAddress?.area + ', '}} {{customer?.prAddress?.village == null? '' : 'Village:'
-            + customer?.prAddress?.village + ', '}} {{customer?.prAddress?.post == null? '' : 'Post:' +
-            customer?.prAddress?.post + ', '}} {{customer?.prAddress?.po == null? '' : 'Police Office:'
-            + customer?.prAddress?.po + ', '}} {{customer?.prAddress?.unions == null? '' : 'Union:' + customer?.prAddress?.unions
-            + ', '}} {{customer?.prAddress?.city == null? '' : 'City:' + customer?.prAddress?.city }}
-
-            <br> Phone: {{customer?.phone}}
-          </small>
-        </div>
-      </div>
-      <!-- End Invoice Top Row -->
-
-      <!-- Invoice body -->
-      <form #inv="ngForm" (ngSubmit)="saveInvoice(inv.value)">
-        <div class="row invoice-body ">
-          <div class="col-md-6">
-            <input class="form-control mt-4" [(ngModel)]="invoice.explanation" name="explanation" placeholder="Explanation" required/>
+      <loading-spiner *ngIf="showSpiner else showForm"></loading-spiner>
+      <ng-template #showForm>
+        <!-- Invoice Top Row -->
+        <div class="row">
+          <div class="col-md-4 col-sm-4 border border-secondary rounded">
+            <h5 class="m-0">{{company?.companyName}}</h5>
+            <small>{{company?.companyAddress}}
+              <br>Phone: {{company?.telephone}}</small>
           </div>
-          <div class="col-md-6" style="border-left:1px solid black;">
-            <table class="table border border-secondary mt-2">
-              <tr>
-                <td>Previous Due</td>
-                <td class="text-right">
-                  <input class="text-right" [(ngModel)]="invoice.previousDue" name="previousDue" readonly/>
-                </td>
-              </tr>
-              <tr>
-                <td>Discount</td>
-                <td class="text-right">
-                  <input *ngIf="invoice.id == null" class="text-right" type="number" [(ngModel)]="invoice.discount" name="discount" (keyup)="calculateBalance()"
-                    required/>
-                </td>
-              </tr>
-              <tr>
-                <td>Total</td>
-                <td class="text-right">
-                  <input class="text-right" [(ngModel)]="invoice.total" name="total" readonly/>
-                </td>
-              </tr>
 
-              <tr>
-                <td>Deposit</td>
-                <td class="text-right">
-                  <input *ngIf="invoice.id == null" class="text-right" type="number" [(ngModel)]="invoice.deposit" name="deposit" (keyup)="calculateBalance()"
-                    required/>
-                </td>
-              </tr>
-              <tr>
-                <td>Due Amount</td>
-                <td class="text-right">
-                  <input class="text-right" [(ngModel)]="invoice.due" name="due" readonly/>
-                </td>
-              </tr>
-            </table>
+          <div class="col-md-4 col-sm-4">
+            <h5 class="text-center">Invoice</h5>
+            <small> Date : {{invoice?.date | date:'yyyy-MM-dd'}}
+              <br> ID : {{invoice?.invoiceId}} </small>
+          </div>
+
+          <div class="col-md-4 col-sm-4 border border-secondary rounded">
+            <h5 class="m-0">{{customer?.name}}</h5>
+            <small>
+              {{customer?.prAddress?.flat == null? '' : 'Flat:' + customer?.prAddress?.flat + ', '}} {{customer?.prAddress?.floor == null?
+              '' : 'Floor:' + customer?.prAddress?.floor + ', '}} {{customer?.prAddress?.house == null? '' : 'House:' + customer?.prAddress?.house
+              + ', '}} {{customer?.prAddress?.road == null? '' : 'Road:' + customer?.prAddress?.road + ', '}} {{customer?.prAddress?.area
+              == null? '' : 'Area:' + customer?.prAddress?.area + ', '}} {{customer?.prAddress?.village == null? '' : 'Village:'
+              + customer?.prAddress?.village + ', '}} {{customer?.prAddress?.post == null? '' : 'Post:' + customer?.prAddress?.post
+              + ', '}} {{customer?.prAddress?.po == null? '' : 'Police Office:' + customer?.prAddress?.po + ', '}} {{customer?.prAddress?.unions
+              == null? '' : 'Union:' + customer?.prAddress?.unions + ', '}} {{customer?.prAddress?.city == null? '' : 'City:'
+              + customer?.prAddress?.city }}
+
+              <br> Phone: {{customer?.phone}}
+            </small>
           </div>
         </div>
-        <!-- End Invoice body -->
-        <div class="row mt-1">
-          <button class="btn btn-success" [disabled]="inv.invalid">Save</button>
-        </div>
-      </form>
+        <!-- End Invoice Top Row -->
+
+        <!-- Invoice body -->
+        <form #inv="ngForm" (ngSubmit)="saveInvoice(inv.value)">
+          <div class="row invoice-body ">
+            <div class="col-md-6">
+              <input class="form-control mt-4" [(ngModel)]="invoice.explanation" name="explanation" placeholder="Explanation" required/>
+            </div>
+            <div class="col-md-6" style="border-left:1px solid black;">
+              <table class="table border border-secondary mt-2">
+                <tr>
+                  <td>Previous Due</td>
+                  <td class="text-right">
+                    <input class="text-right" [(ngModel)]="invoice.previousDue" name="previousDue" readonly/>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Discount</td>
+                  <td class="text-right">
+                    <input *ngIf="invoice.id == null" class="text-right" type="number" [(ngModel)]="invoice.discount" name="discount" (keyup)="calculateBalance()"
+                      required/>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Total</td>
+                  <td class="text-right">
+                    <input class="text-right" [(ngModel)]="invoice.total" name="total" readonly/>
+                  </td>
+                </tr>
+
+                <tr>
+                  <td>Deposit</td>
+                  <td class="text-right">
+                    <input *ngIf="invoice.id == null" class="text-right" type="number" [(ngModel)]="invoice.deposit" name="deposit" (keyup)="calculateBalance()"
+                      required/>
+                  </td>
+                </tr>
+                <tr>
+                  <td>Due Amount</td>
+                  <td class="text-right">
+                    <input class="text-right" [(ngModel)]="invoice.due" name="due" readonly/>
+                  </td>
+                </tr>
+              </table>
+            </div>
+          </div>
+          <!-- End Invoice body -->
+          <div class="row mt-1">
+            <button class="btn btn-success" [disabled]="inv.invalid">Save</button>
+          </div>
+        </form>
+      </ng-template>
     </div>
 
   </div>
