--- a/src/app/dashboard/dashboard-navbar/dashboard-navbar.component.html
+++ b/src/app/dashboard/dashboard-navbar/dashboard-navbar.component.html
@@ -36,6 +36,11 @@
             <span class="sr-only">(current)</span>
           </a>
         </li>
+        <li class="nav-item active" *ngIf="hasIspRole()">
+          <a class="nav-link" (click)="isCollapsed = !isCollapsed" routerLink="/dashboard/sms/sms-history"> SMS
+            <span class="sr-only">(current)</span>
+          </a>
+        </li>
       </ul>
 
       <ul class="navbar-nav">
