--- a/src/app/dashboard/user/user-sub-navbar/user-sub-navbar.component.html
+++ b/src/app/dashboard/user/user-sub-navbar/user-sub-navbar.component.html
@@ -2,4 +2,5 @@
   <a routerLink="/dashboard/user/add-user" class="btn btn-light btn-sm" [class.active]="active == 1" (click)="makeActive(1)">ADD</a>
   <a routerLink="/dashboard/user/user-list" class="ml-2 btn btn-light btn-sm" [class.active]="active == 2" (click)="makeActive(2)">LIST</a>
   <a routerLink="/dashboard/user/user-roles" class="ml-2 btn btn-light btn-sm" [class.active]="active == 3" (click)="makeActive(3)">ROLES</a>
+  <a routerLink="/dashboard/user/admin-user" class="ml-2 btn btn-light btn-sm" [class.active]="active == 4" (click)="makeActive(4)">ADMIN USER</a>
 </nav>
