--- a/src/app/dashboard/accounting/invoice-list/invoice-list.component.html
+++ b/src/app/dashboard/accounting/invoice-list/invoice-list.component.html
@@ -5,11 +5,33 @@
         {{inv?.date | date }}
         <small>{{ inv?.deposit }}</small>
       </div>
-      <button class="btn btn-success" (click)="first()">First</button>
-      <button class="btn btn-success" (click)="next()">Next</button>
+      <nav aria-label="Page navigation example">
+        <ul class="pagination justify-content-end">
+          <li class="page-item">
+            <select class="page-link" name="limit" #cl (change)="changeLimit(cl.value)" style="padding: 0.40rem 0.25rem">
+              <option value="5">5</option>
+              <option value="10">10</option>
+              <option value="15">15</option>
+              <option value="20">20</option>
+            </select>
+          </li>
+          <li class="page-item">
+            <a class="page-link" (click)="first()">First</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" (click)="prev()">Previous</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" (click)="next()">Next</a>
+          </li>
+          <li class="page-item">
+            <a class="page-link" (click)="last()">Last</a>
+          </li>
+        </ul>
+      </nav>
     </div>
 
-    <div class="col-md-8" *ngIf="customer" >
+    <div class="col-md-8" *ngIf="customer">
       <loading-spiner *ngIf="showSpiner else showForm"></loading-spiner>
       <ng-template #showForm id="print-section">
         <!-- Invoice Top Row -->
